[gd_scene load_steps=8 format=3 uid="uid://fbhxvbro6wee"]

[ext_resource type="Texture2D" uid="uid://cge8c3yh3lcbp" path="res://Simple Tower Defense/Towers/Combat Towers/spr_tower_archer.png" id="1_k1sas"]
[ext_resource type="Script" uid="uid://buoiw8mr35mce" path="res://towers/tower.gd" id="1_vedim"]
[ext_resource type="Texture2D" uid="uid://dar7tkqsp7fah" path="res://Simple Tower Defense/Towers/Combat Towers/tower-range-area.png" id="3_b4iyp"]

[sub_resource type="Shader" id="Shader_uyl23"]
resource_local_to_scene = true
code = "shader_type canvas_item;

uniform vec4 color : source_color = vec4(1.0);
uniform float width : hint_range(0, 10) = 1.0;
uniform int pattern : hint_range(0, 2) = 0; // diamond, circle, square
uniform bool inside = false;
uniform bool add_margins = true; // only useful when inside is false

void vertex() {
	if (add_margins) {
		VERTEX += (UV * 2.0 - 1.0) * width;
	}
}

bool hasContraryNeighbour(vec2 uv, vec2 texture_pixel_size, sampler2D texture) {
	for (float i = -ceil(width); i <= ceil(width); i++) {
		float x = abs(i) > width ? width * sign(i) : i;
		float offset;
		
		if (pattern == 0) {
			offset = width - abs(x);
		} else if (pattern == 1) {
			offset = floor(sqrt(pow(width + 0.5, 2) - x * x));
		} else if (pattern == 2) {
			offset = width;
		}
		
		for (float j = -ceil(offset); j <= ceil(offset); j++) {
			float y = abs(j) > offset ? offset * sign(j) : j;
			vec2 xy = uv + texture_pixel_size * vec2(x, y);
			
			if ((xy != clamp(xy, vec2(0.0), vec2(1.0)) || texture(texture, xy).a <= 0.0) == inside) {
				return true;
			}
		}
	}
	
	return false;
}

void fragment() {
	vec2 uv = UV;
	
	if (add_margins) {
		vec2 texture_pixel_size = vec2(1.0) / (vec2(1.0) / TEXTURE_PIXEL_SIZE + vec2(width * 2.0));
		
		uv = (uv - texture_pixel_size * width) * TEXTURE_PIXEL_SIZE / texture_pixel_size;
		
		if (uv != clamp(uv, vec2(0.0), vec2(1.0))) {
			COLOR.a = 0.0;
		} else {
			COLOR = texture(TEXTURE, uv);
		}
	} else {
		COLOR = texture(TEXTURE, uv);
	}
	
	if ((COLOR.a > 0.0) == inside && hasContraryNeighbour(uv, TEXTURE_PIXEL_SIZE, TEXTURE)) {
		COLOR.rgb = inside ? mix(COLOR.rgb, color.rgb, color.a) : color.rgb;
		COLOR.a += (1.0 - COLOR.a) * color.a;
	}
}"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_b4iyp"]
resource_local_to_scene = true
shader = SubResource("Shader_uyl23")
shader_parameter/color = Color(1, 0.635294, 0.0784314, 1)
shader_parameter/width = 0.0
shader_parameter/pattern = 0
shader_parameter/inside = false
shader_parameter/add_margins = true

[sub_resource type="CircleShape2D" id="CircleShape2D_k1sas"]
radius = 27.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uyl23"]
size = Vector2(16, 16)

[node name="Tower" type="Node2D" groups=["towers"]]
y_sort_enabled = true
script = ExtResource("1_vedim")

[node name="TowerSprite" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_b4iyp")
position = Vector2(-8, -23)
texture = ExtResource("1_k1sas")
centered = false

[node name="RangeSprite" type="Sprite2D" parent="TowerSprite"]
visible = false
texture = ExtResource("3_b4iyp")
centered = false
offset = Vector2(-19, -13)

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -9)
shape = SubResource("CircleShape2D_k1sas")

[node name="ProjectileTimer" type="Timer" parent="."]
one_shot = true

[node name="ProjectileSpawnPoint" type="Node2D" parent="."]
position = Vector2(0, -18)

[node name="UpgradeClickArea2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="UpgradeClickArea2D"]
position = Vector2(0, -8)
shape = SubResource("RectangleShape2D_uyl23")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="timeout" from="ProjectileTimer" to="." method="_on_projectile_timer_timeout"]
